[gd_scene load_steps=2 format=3 uid="uid://cg7tylpsebnlc"]

[ext_resource type="Script" path="res://globals/debug/debug_frames_window.gd" id="1_5tuvu"]

[node name="DebugFramesWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 450.0

[node name="Window" type="Window" parent="."]
position = Vector2i(100, 100)
size = Vector2i(300, 400)
script = ExtResource("1_5tuvu")

[node name="MarginContainer" type="MarginContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FrameSlider" type="HSlider" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="FrameSpinBox" type="SpinBox" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Tree" type="Tree" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
select_mode = 1

[node name="RecordingToggle" type="CheckButton" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Recording"

[node name="ResetButton" type="Button" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"
